<resources>
    <string name="app_name" translatable="false">Stankin</string>
    <string name="app_name_full" translatable="false">Stankin Schedule</string>
    <string name="app_icon">Application icon</string>
    <string name="update_cancelled">The app update is cancelled</string>
    <string name="update_downloaded">An update has just been downloaded</string>
    <string name="update_restart">Restart</string>
    <string name="update_available">An update is available</string>
    <string name="update_start_update">Update</string>
    <string name="pair_editor">Pair editor</string>
    <string name="date_editor">Date editor</string>
    <string name="schedule_editor">Schedule editor</string>
    <string name="predict_rating">Predict rating</string>
    <string name="nav_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="nav_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_home">Home</string>
    <string name="nav_schedule">Schedule</string>
    <string name="nav_module_journal">Module journal</string>
    <string name="nav_university_map">University map</string>
    <string name="nav_information">Information</string>
    <string name="nav_about_application">About application</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_dark_mode">Dark mode</string>
    <string name="home_no_favorite_schedule">No favorite schedule</string>
    <string name="home_select_schedule_subgroup">Select schedule subgroup</string>
    <string name="home_selected_subgroup">Selected subgroup:</string>
    <string name="home_subgroup_common">---</string>
    <string name="home_subgroup_a">Subgroup A</string>
    <string name="home_subgroup_b">Subgroup B</string>
    <string name="home_select">Select</string>
    <string name="home_display_subgroup">Display a subgroup</string>
    <string name="mj_login">Login</string>
    <string name="mj_password">Password</string>
    <string name="mj_empty_filed">Empty filed!</string>
    <string name="mj_forgot_password">Forgot password?</string>
    <string name="mj_sign_in">Sign in</string>
    <string name="mj_data_problem">There was a problem retrieving the data</string>
    <string name="mj_sign_out">Sign out</string>
    <string name="mj_information_background">Module journal information background</string>
    <string name="mj_student">Student: %1$s</string>
    <string name="mj_group">Group: %1$s</string>
    <string name="mj_last_update">\"%1$s\" data from the cache from: %2$s</string>
    <string name="mj_update_marks">Update marks</string>
    <string name="mj_current_rating">Current rating</string>
    <string name="mj_predicted_rating">Predicted rating</string>
    <string name="mj_rating">Rating</string>
    <string name="mj_no_disciplines">No disciplines without grades</string>
    <string name="mj_select_semester">Select semester</string>
    <string name="mj_change_semester">Change semester</string>
    <string name="mj_show_all_disciplines">Show all disciplines</string>
    <string name="mj_mark_below_25">Score below 25</string>
    <string name="mj_mark_above_100">Score above 100</string>
    <string name="sch_name">Schedule</string>
    <string name="sch_my_schedule">My schedules</string>
    <string name="sch_selected_subgroup">Selected subgroup</string>
    <string name="sch_no_available">No available schedules</string>
    <string name="sch_add">Add schedule</string>
    <string name="sch_remove">Remove schedule</string>
    <string name="sch_removed">Schedule removed</string>
    <string name="sch_adding_schedule">Adding a schedule</string>
    <string name="sch_from_repository">From repository</string>
    <string name="sch_create_new">Create new</string>
    <string name="sch_load">Load</string>
    <string name="sch_remove_schedules">The following number of schedules will be deleted: %1$s</string>
    <string name="sch_successfully_added">Schedule successfully added</string>
    <string name="sch_failed_add">Schedule could not be added</string>
    <string name="sch_remove_selected">Removed selected schedules</string>
    <string name="sch_edit_schedules">Edit schedules</string>
    <string name="sch_remove_schedule">Remove schedule</string>
    <string name="sch_without_subgroup">without a subgroup</string>
    <string name="sch_adding_new_schedules">Adding new schedules</string>
    <string name="repository">Repository</string>
    <string name="repository_update">Update</string>
    <string name="repository_search">Search</string>
    <string name="repository_search_hint">Schedule…</string>
    <string name="repository_last_update">Last update</string>
    <string name="repository_schedule_loaded">Schedule loaded</string>
    <string name="repository_loading_failure">Failure of loading the schedule</string>
    <string name="repository_loading_schedule">Loading schedule</string>
    <string name="repository_start_loading">Started download the schedule: %1$s</string>
    <string name="repository_checking_schedule">Checking the loaded schedule</string>
    <string name="repository_info_background">Repository information background</string>
    <string name="repository_not_result">Not result</string>
    <string name="repository_schedule_sync">Schedule synchronization button</string>
    <string name="repository_schedule_exist">Schedule already exists</string>
    <string name="repository_schedule_exist_description">Schedule with the name \'%1$s\' already exists</string>
    <string name="repository_schedule_replace">Replace</string>
    <string name="repository_schedule_change">Select name</string>
    <string name="repository_schedule_synced">The schedule is synchronized</string>
    <string name="sch_view">Schedule View</string>
    <string name="sch_view_no_pairs">No pairs</string>
    <string name="sch_view_add_pair">Add pair</string>
    <string name="sch_view_current_day">To the current day</string>
    <string name="sch_view_go_to_day">Go to day</string>
    <string name="sch_view_remove_pair">Remove pair</string>
    <string name="sch_view_save_schedule">Save schedule</string>
    <string name="sch_view_saved_error">Error saving the schedule</string>
    <string name="sch_view_rename">Rename schedule</string>
    <string name="sch_view_renamed">Schedule renamed</string>
    <string name="sch_view_unable_rename">Unable to rename schedule</string>
    <string name="sch_view_will_be_deleted">Attention schedule will be deleted irrevocably!</string>
    <string name="sch_view_error_loading">Error loading schedule</string>
    <string name="sch_view_saved">Schedule saved</string>
    <string name="sch_view_today">Today</string>
    <string name="sch_view_empty">Schedule is empty</string>
    <string name="sch_home_display_subgroup">Displayed subgroup on the main page: %1$s</string>
    <string name="sch_home_change_subgroup">Change</string>
    <string name="sch_view_go_to">Go to</string>
    <string name="sch_view_go_to_schedule_start">Schedule start</string>
    <string name="sch_view_go_to_schedule_end">End of schedule</string>
    <string name="sch_view_edit">Edit schedule</string>
    <string name="sch_view_not_edit">Schedule cannot be edited</string>
    <string name="sch_info">Schedule info</string>
    <string name="sch_info_description">Name: %1$s\nStatus: %2$s</string>
    <string name="sch_synced">synchronized</string>
    <string name="sch_not_synced">not synchronized</string>
    <string name="sch_off_sync">Disable synchronization</string>
    <string name="sch_off_sync_description">Are you sure you want to turn off syncing? The schedule will not be automatically updated, however, it can be edited.</string>
    <string name="pair_editor_title">Title</string>
    <string name="pair_editor_lecturer">Lecturer</string>
    <string name="pair_editor_type">Type</string>
    <string name="pair_editor_subgroup">Subgroup</string>
    <string name="pair_editor_classroom">Classroom</string>
    <string name="pair_editor_time">Time</string>
    <string name="pair_editor_add_date">Add date</string>
    <string name="pair_editor_date">Date</string>
    <string name="pair_editor_not_dates">Not dates</string>
    <string name="pair_editor_date_removed">Date was removed</string>
    <string name="pair_editor_empty_dates_list">You must add at least one date.</string>
    <string name="pair_editor_empty_title">The field cannot be empty</string>
    <string name="pair_editor_conflict_pair">You cannot add a pair. Conflicts with \"%1$s\".</string>
    <string name="pair_editor_loading_schedule_error">Unable to load the schedule for editing</string>
    <string name="pair_editor_pair_changed_title">The pair has been changed</string>
    <string name="pair_editor_pair_changed_message">Some parameters of the pair have been changed. Your changes will be lost if you do not save them.</string>
    <string name="pair_editor_save">Save</string>
    <string name="about_description">Description</string>
    <string name="about_description_text">
        \t<b>Stankin Schedule</b> - is an application for students of MSTU "STANKIN",
        in which you can: view the schedules,
        view the evaluations of the modular journal and
        read the news of the university.\n\n

        \tDeveloper: Vereshchagin Nikolay \n\n

        \tThanks for the closed beta: \n
        \t\t - Bogodaiko S.     \n
        \t\t - Binniatov R.     \n
        \t\t - Odintsova E.     \n
        \t\t - Alekseev S.      \n
        \t\t - Altunin A.       \n
        \t\t - Matveychuk P.    \n
        \t\t - Lopatin D.       \n
        \t\t - Arkhipova D.     \n
        \t\t - Elovikov A.      \n
        \t\t - Duma A.          \n
        \t\t - Dobrovolsky D.   \n
        \t\t - Belova E.        \n
    </string>
    <string name="about_privacy_policy">Privacy Policy</string>
    <string name="about_terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="notification">Notification</string>
    <string name="pref_general">General</string>
    <string name="pref_dark_mode">Dark mode</string>
    <string name="pref_mode">Mode</string>
    <string name="pref_general_summary">Main application settings</string>
    <string name="pref_schedule_summary">Customize the schedule</string>
    <string name="pref_widget_summary">Configuring app widgets</string>
    <string name="pref_notification_summary">Setting up notifications</string>
    <string name="pref_schedule_view">Schedule view</string>
    <string name="pref_schedule_view_method">Schedule view method</string>
    <string name="pref_lecture_color">Lecture color</string>
    <string name="pref_color_summary">Color displayed in the schedule</string>
    <string name="pref_seminar_color">Seminar color</string>
    <string name="pref_laboratory_color">Laboratory color</string>
    <string name="pref_subgroup_a_color">Subgroup A color</string>
    <string name="pref_subgroup_b_color">Subgroup B color</string>
    <string name="pref_schedule_view_limit">Limit the schedule</string>
    <string name="pref_schedule_view_limit_summary">Schedule will be limited to the extreme dates in it</string>
    <string name="pref_links">Links</string>
    <string name="pref_app_browser">In-App browser</string>
    <string name="pref_app_browser_summary">Open external links within the app</string>
    <string name="pref_home_schedule_delta">Number of days in the schedule</string>
    <string name="pref_home_schedule_delta_summary">Displayed forwards and backwards</string>
    <string name="widget">Widget</string>
    <string name="widget_schedule_configure">Configuration of a widget with a schedule</string>
    <string name="widget_schedule">Schedule</string>
    <string name="widget_subgroup">Subgroup</string>
    <string name="widget_show_subgroup">Show a subgroup</string>
    <string name="widget_schedule_add">Add schedule widget</string>
</resources>