<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <PreferenceCategory
        android:title="@string/nav_home"
        android:layout="@layout/preference_custom_category">

        <SeekBarPreference
            android:key="home_schedule_delta"
            android:title="@string/pref_home_schedule_delta"
            android:summary="@string/pref_home_schedule_delta_summary"
            android:defaultValue="2"
            app:min="2"
            android:max="7"
            app:showSeekBarValue="true"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="schedule_view"
        android:title="@string/pref_schedule_view"
        app:layout="@layout/preference_custom_category" >

        <SwitchPreference
            android:key="schedule_view_limit"
            android:title="@string/pref_schedule_view_limit"
            android:summary="@string/pref_schedule_view_limit_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false" />

        <ListPreference
            android:key="schedule_view_method"
            android:title="@string/pref_schedule_view_method"
            android:entries="@array/pref_schedule_method_list"
            android:entryValues="@array/pref_schedule_method_list_entry"
            android:defaultValue="pref_horizontal"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

        <com.vereshchagin.nikolay.stankinschedule.ui.settings.picker.ColorPreference
            android:key="schedule_lecture_color"
            android:title="@string/pref_lecture_color"
            android:summary="@string/pref_color_summary"
            android:defaultValue="@color/colorCardLecture"
            app:iconSpaceReserved="false" />

        <com.vereshchagin.nikolay.stankinschedule.ui.settings.picker.ColorPreference
            android:key="schedule_seminar_color"
            android:title="@string/pref_seminar_color"
            android:summary="@string/pref_color_summary"
            android:defaultValue="@color/colorCardSeminar"
            app:iconSpaceReserved="false" />

        <com.vereshchagin.nikolay.stankinschedule.ui.settings.picker.ColorPreference
            android:key="schedule_laboratory_color"
            android:title="@string/pref_laboratory_color"
            android:summary="@string/pref_color_summary"
            android:defaultValue="@color/colorCardLaboratory"
            app:iconSpaceReserved="false" />

        <com.vereshchagin.nikolay.stankinschedule.ui.settings.picker.ColorPreference
            android:key="schedule_subgroup_a_color"
            android:title="@string/pref_subgroup_a_color"
            android:summary="@string/pref_color_summary"
            android:defaultValue="@color/colorCardSubgroupA"
            app:iconSpaceReserved="false" />

        <com.vereshchagin.nikolay.stankinschedule.ui.settings.picker.ColorPreference
            android:key="schedule_subgroup_b_color"
            android:title="@string/pref_subgroup_b_color"
            android:summary="@string/pref_color_summary"
            android:defaultValue="@color/colorCardSubgroupB"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>


</PreferenceScreen>