<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/nav_home"
        android:layout="@layout/preference_custom_category">

        <SeekBarPreference
            android:key="home_schedule_delta"
            android:title="@string/pref_home_schedule_delta"
            android:summary="@string/pref_home_schedule_delta_summary"
            android:defaultValue="2"
            app:min="2"
            android:max="7"
            app:showSeekBarValue="true"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_links"
        app:layout="@layout/preference_custom_category">

        <SwitchPreferenceCompat
            android:key="app_browser"
            android:title="@string/pref_app_browser"
            android:summary="@string/pref_app_browser_summary"
            android:defaultValue="true"
            app:defaultValue="true"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_dark_mode"
        app:layout="@layout/preference_custom_category" >

        <ListPreference
            android:key="dark_mode"
            android:title="@string/pref_mode"
            android:entries="@array/pref_dark_mode_list"
            android:entryValues="@array/pref_dark_mode_list_entry"
            android:defaultValue="pref_system_default"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>