<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RadioGroup
        android:id="@+id/subgroup_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@id/subgroup_common"
        android:orientation="vertical"
        android:padding="@dimen/default_layout_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_layout_padding"
            android:text="@string/home_selected_subgroup"
            android:textAlignment="center"
            android:textColor="?android:attr/textColorPrimary" />

        <RadioButton
            android:id="@+id/subgroup_common"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_subgroup_common" />

        <RadioButton
            android:id="@+id/subgroup_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_subgroup_a" />

        <RadioButton
            android:id="@+id/subgroup_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_subgroup_b" />

        <Button
            android:id="@+id/select_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_select"
            android:textColor="?android:attr/textColorPrimary"/>

    </RadioGroup>

</layout>
