<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about.AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/default_layout_padding">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_icon"
            android:src="@drawable/logo_about" />

        <TextView
            style="@style/Text.Large"
            android:text="@string/app_name_full"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?android:attr/textColorPrimary"
            tools:text="Last version" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <androidx.cardview.widget.CardView
            style="@style/CardStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/Text.Subhead"
                    android:text="@string/about_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableBottom="@drawable/divider"
                    android:padding="@dimen/default_layout_padding"/>

                <View
                    style="@style/Divider"
                    android:layout_marginStart="@dimen/default_layout_padding"
                    android:layout_marginEnd="@dimen/default_layout_padding"/>

                <TextView
                    android:id="@+id/app_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_description_text"
                    android:textColor="?android:attr/textColorSecondary"
                    android:padding="@dimen/default_layout_padding" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/CardStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/Text.Subhead"
                android:id="@+id/about_privacy_policy"
                android:text="@string/about_privacy_policy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_layout_padding"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                app:drawableEndCompat="@drawable/ic_button_next" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/CardStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/Text.Subhead"
                android:id="@+id/about_terms"
                android:text="@string/about_terms_conditions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_layout_padding"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                app:drawableEndCompat="@drawable/ic_button_next" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>