<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".widget.ScheduleWidgetConfigureActivity" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/default_layout_padding"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" >

            <TextView
                style="@style/Text.Subhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/input_label_horizontal_spacing"
                android:paddingEnd="@dimen/input_label_horizontal_spacing"
                android:text="@string/widget_schedule_configure" />

            <View
                style="@style/Divider"
                android:layout_marginTop="@dimen/default_layout_padding"
                android:layout_marginBottom="@dimen/default_layout_padding" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/widget_schedule_selector"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/widget_schedule"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/widget_subgroup_selector"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/widget_subgroup"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/widget_subgroup_display"
                android:text="@string/widget_show_subgroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" />

            <androidx.cardview.widget.CardView
                style="@style/CardStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/widget_schedule_add"
                    style="@style/Text.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/default_layout_padding"
                    android:text="@string/widget_schedule_add"
                    android:textAlignment="center"
                    android:textColor="?android:attr/textColorPrimary"
                    android:foreground="?android:attr/selectableItemBackground" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</layout>